{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 36,
  "lineage": "76d20fad-1eec-da2e-5a92-ab145acef0b5",
  "resources": [
    {
      "module": "module.elastic",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elasticsearch",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6621c01e8c2de2c",
            "arn": "arn:aws:ec2:us-west-2:598771507540:instance/i-0530ee98b67341e12",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530ee98b67341e12",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b87e47cab599380f",
            "private_dns": "ip-172-31-31-196.us-west-2.compute.internal",
            "private_ip": "172.31.31.196",
            "public_dns": "ec2-34-217-207-174.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.207.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-056391f5ddd4b4ce8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-82806dfa",
            "tags": {
              "Name": "elastic"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07365741"
            ]
          },
          "dependencies": [
            "aws_key_pair.server"
          ]
        }
      ]
    },
    {
      "module": "module.kibana",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kibana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6621c01e8c2de2c",
            "arn": "arn:aws:ec2:us-west-2:598771507540:instance/i-0d0e982a5df28271f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0e982a5df28271f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afcfcfe465e9a3f5",
            "private_dns": "ip-172-31-26-239.us-west-2.compute.internal",
            "private_ip": "172.31.26.239",
            "public_dns": "ec2-35-162-10-97.us-west-2.compute.amazonaws.com",
            "public_ip": "35.162.10.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00cd6305ca6147cbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-82806dfa",
            "tags": {
              "Name": "kibana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07365741"
            ]
          },
          "dependencies": [
            "aws_key_pair.server"
          ]
        }
      ]
    },
    {
      "module": "module.logstash",
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6621c01e8c2de2c",
            "arn": "arn:aws:ec2:us-west-2:598771507540:instance/i-0d1254e3abc3f6ddb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1254e3abc3f6ddb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09deabc8fffdc15b5",
            "private_dns": "ip-172-31-30-249.us-west-2.compute.internal",
            "private_ip": "172.31.30.249",
            "public_dns": "ec2-34-219-163-187.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.163.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08bc11d7bf11eafa2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-82806dfa",
            "tags": {
              "Name": "logstash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07365741"
            ]
          },
          "dependencies": [
            "aws_key_pair.server"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6621c01e8c2de2c",
            "arn": "arn:aws:ec2:us-west-2:598771507540:instance/i-0acfa67da4c8a7ea8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acfa67da4c8a7ea8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01dc5b425dc7f5d6b",
            "private_dns": "ip-172-31-21-31.us-west-2.compute.internal",
            "private_ip": "172.31.21.31",
            "public_dns": "ec2-54-245-34-99.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.34.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-068a9c1488e33fef2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-82806dfa",
            "tags": {
              "Name": "server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07365741"
            ]
          },
          "dependencies": [
            "aws_key_pair.server"
          ]
        }
      ]
    },
    {
      "module": "module.elastic",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598771507540:security-group/sg-0e512411ad9cf9cf1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e512411ad9cf9cf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elasticsearch",
            "name_prefix": null,
            "owner_id": "598771507540",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06b8287e"
          }
        }
      ]
    },
    {
      "module": "module.kibana",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kibana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598771507540:security-group/sg-04e9083f89b114615",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e9083f89b114615",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kibana",
            "name_prefix": null,
            "owner_id": "598771507540",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06b8287e"
          }
        }
      ]
    },
    {
      "module": "module.logstash",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logstash",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598771507540:security-group/sg-0ea53c62c3307323d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea53c62c3307323d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "logstash",
            "name_prefix": null,
            "owner_id": "598771507540",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06b8287e"
          }
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598771507540:security-group/sg-0665cac9cbb60179a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0665cac9cbb60179a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server",
            "name_prefix": null,
            "owner_id": "598771507540",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06b8287e"
          }
        }
      ]
    }
  ]
}